app/templates/resources/style.css
#bio, #notes, #giftideas, #birthday, #relations, .agentlist, .account, #altnames {
	max-width: 428px;
	margin: 10px auto;
}

.agentlist { list-style-type: none; padding: 0; }
.agentlist a { text-decoration: none; color: inherit; display:block; background: #FFE1CA; padding: 10px; margin: 1px;}
.agentlist a:hover { background-color: #612B00; color: #FFE1CA; }
.agentlist a.isdead { color: #888; }
.agentlist a.isdead:hover { background-color: #333340; color: #FFE1CA; }
.agentlist h3 { margin: 0; }
.agentlist .relation { font-style: italic; font-size: smaller; }

.agenttable { margin: auto; }
.agenttable thead { font-weight: bold; }
.agenttable td { padding: 5px 10px; }
.agenttable a { text-decoration: none; color: inherit; display:block;}
.agenttable a:hover { text-decoration: underline; }

.tools { float: right; margin: 5px;}
.toollink { font-size: 1em; color: #010F00; background-color: #E5B5D1; border-radius: 4px; display: inline-block; max-width: 100px; text-decoration: none; margin-bottom: 5px; padding: 10px 15px; vertical-align: middle; font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif; font-weight: 400; font-size: 13px; }
#subnav a { cursor: pointer; }
nav > a.primary { color: #E5B5D1; background-color: #4D002D; }
nav { display: block; overflow: hidden; background: #B9E7B7; color: #612B00; margin-bottom: 10px; }
.navback { float: left; }
.toollink { background-repeat: no-repeat; background-position: right 7px center; padding-right: 26px; margin: 2px; }
.navadd, .addlink { background-image: url(/resources/admin/img/icon-addlink.svg); }
.navedit, .viewsitelink { background-image: url(/resources/admin/img/tooltag-arrowright.svg); }
.toollink:link, .toollink:visited { background-color: #E5B5D1; color: #010F00; }
.toollink:hover { background-color: #4D002D; color: #E5B5D1; }
.navswitch { float: left; margin: 10px 0 }
.navswitch a { display: inline; text-decoration: none; color: #B98E6C; }
.navswitch a.current { font-weight: bold; color: #612B00; }
.navswitch a:hover { text-decoration: underline; }
.account {
	display: block;
	font-weight: bold;
	text-align: center;
	text-decoration: none;
}
.account.postal {
	white-space: pre;
}
.account.phonenum {
	font-family: monospace;
	font-size: 2em;
	padding: 0.7em 0;
}
a.account.phonenum {
	background: #E5B5D1;
	color: #120800;
}
a.account.phonenum:hover {
	background-color: #4D002D;
	color: #E5B5D1;
}
.agentlist .account.phonenum {
	padding: 0.3em 0;
	margin: 0;
}
.account.email {
	font-family: monospace;
	font-size: 2em;
	padding: 0.7em 0;
	overflow-x: auto;
}
a.account.email {
	background: #baf8ff;
	color: #120800;
}
a.account.email:hover {
	background-color: #0e3e44;
	color: #baf8ff;
}

.account.facebook img {
	float: left;
	height: 42px;
	margin: 4px;
}
a.account.facebook {
	border: solid #3b5998 3px;
	color: #3b5998;
	line-height: 50px;
	background-color: #dfe3ee;
	font-size: 22px;
}
a.account.facebook:hover {
	background-color: #3b5998;
	color: #dfe3ee;
}

#bio {
	border: #ccc solid 1px;
}
.content {
	display: block;
	margin: 9px;
	white-space: pre-line;
	font-size: 1.1em;
}
#relations {
	border: solid 2px #500094;
	border-radius: 8px 8px 0 0;
}
#relations > h2 {
	background: #500094;
	color: #fff;
	margin: 0;
}
#relations .agentlist {
	margin: 0;
}
.relation { display: block;}
h2 { text-align: center; }

#giftideas {
	border: solid #612b00;
	border-radius: 3px 10px;
}
#giftideas summary {
	font-size: 1.5em;
	font-weight: bold;
	background: #612b00;
	color: #ffe1ca;
	padding: 5px;
	cursor: pointer;
}
#notes {
	border: solid 2px #000052;
	border-radius: 0 0 8px 8px;
}
#notes h2 {
	margin: 0;
	background: #000052;
	color: #fff;
	padding: 5px;
}
#birthday .label { font-weight: bold; }
#dead { background-color: #333340; color: #fff; font-family: Brush Script Std, cursive; padding: 0.7em; text-align: center; margin: 0.5em auto; }
#dead .rest-in-peace { display: block; font-size: 2em; font-family: Snell Roundhand, Brush Script MT, Brush Script Std, cursive; }
#altnames {
	border: solid thin grey;
}
#altnames h4 {
	margin: 0;
	background: #612b00;
	color: #fafafa;
	padding: 1px 10px 4px;
	font-family: 'Lucida', monospace;
}
#altnames ul {
	list-style-type: none;
	padding: 0;
	margin: 0;
}
#altnames li {
	padding: 5px 10px;
	background: #B9E7B7;
	color: #612B00;
}
.star {
	color: #740acf;
	font-weight: bold;
	float: left;
	margin-right: 10px;
	margin-top: -2px;
	text-shadow: 0 0 1px #ffffff;
	width: 1em;
	height: 1.5em;
}
.star:before {
	position: absolute;
}
.star.changed:before {
	font-size: 5em;
	margin-left: -0.4em;
	margin-top: -0.6em;
	color: #ffcf00;
	transition: font-size 0.5s, margin 0.5s;
}
.star.changed-transition:not(.changed):before {
	transition: font-size 2s, margin 2s, color 4s ease-in;
}
.star:hover {
	color: #00b9ff;
	text-shadow: none;
}
.star[data-starred=True]:before {
	content: "★";
}
.star[data-starred=True]:not(.changed-transition):hover:before {
	content: "☆";
}
.star[data-starred=False]:before {
	content: "☆";
}
.star[data-starred=False]:not(.changed-transition):hover:before {
	content: "★";
}
.star.loading {
	animation: rotation 2s infinite linear;
}
.star.failed {
	color: #cc0033;
}

@keyframes rotation {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

/* Admin site */
div.breadcrumbs { background: none; color: #612B00; float: left; padding: 5px; border: none; font-size: 14px; text-align: left; margin: 5px; }
div.breadcrumbs a { color: #B98E6C; }
div.breadcrumbs a:hover { color: inherit; }
.module h2, .module caption, .inline-group h2 { background: #B9E7B7; color: #612B00; }
a.section:link, a.section:visited { color: #612B00; }
.module a { color: #91592C; }
.module a:hover { background: inherit; }
.button, input[type=submit], input[type=button], .submit-row input, a.button { background: #E5B5D1; color: #010F00; }
.button.default, input[type=submit].default, .submit-row input.default { background: #732352; color: #E5B5D1;}

/* Colour Palette guide */

.color-primary-0 { color: #287624 }	/* Main Primary color */
.color-primary-1 { color: #B9E7B7 }
.color-primary-2 { color: #5A9657 }
.color-primary-3 { color: #044E00 }
.color-primary-4 { color: #010F00 }

.color-secondary-1-0 { color: #91592C }	/* Main Secondary color (1) */
.color-secondary-1-1 { color: #FFE1CA }
.color-secondary-1-2 { color: #B98E6C }
.color-secondary-1-3 { color: #612B00 }
.color-secondary-1-4 { color: #120800 }

.color-secondary-2-0 { color: #732352 }	/* Main Secondary color (2) */
.color-secondary-2-1 { color: #E5B5D1 }
.color-secondary-2-2 { color: #93567A }
.color-secondary-2-3 { color: #4D002D }
.color-secondary-2-4 { color: #0E0008 }

